# floating-ayah

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  project-plan.md
resources/: quran.sqlite
scripts/: generate_db.py  seed-quran.tsv
src/: App.tsx  Notification.tsx  NotificationWindow.tsx  Settings.tsx  StatsPanel.tsx  main.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  settings.rs  stats.rs  timer.rs  tray.rs
