[package]
name = "noor-remind"
version = "0.1.0"
description = "Offline Quran reminder desktop app"
authors = ["Noor Remind Contributors"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
